--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Photos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -14,6 +15,6 @@
         <img src="https://picsum.photos/300?random=3">
     </div>
     <button class="btn">Load More</button>
-    
+    <script src="main.js"></script>
 </body>
 </html>
